# superset-iris

./: Dockerfile  README.md  docker-compose-simple.yml  docker-compose.yml  docker-entrypoint.sh  setup.cfg  setup.py  superset_config.py
.github/workflows/: Dockerfile  deploy.yml  deployment.yml  main.yml  superset.sh  superset_config.py
superset-docker/: .env  requirements-local.txt
superset-docker/pythonpath_dev/: superset_config.py
superset_iris/: engine.py
