[metadata]
name = superset-iris
version = 0.3.0
description = InterSystems IRIS Engine for Apache Superset
long_description = file: README.md
url = https://github.com/caretdev/superset-iris
maintainer = CaretDev
maintainer_email = dmitry@caretdev.com
license = MIT
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Database :: Front-Ends
    Operating System :: OS Independent
keywords="Superset InterSystems IRIS",
project_urls =
    Source = https://github.com/caretdev/superset-iris
    Tracker = https://github.com/caretdev/superset-iris/issues

[options]
packages =
    superset_iris
